manifests/media/sabnzbd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sabnzbd
  name: sabnzbd
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - image: hotio/sabnzbd
        name: sabnzbd
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sabnzbd-appdata
          mountPath: /config
      volumes:
        - name: sabnzbd-appdata
          persistentVolumeClaim:
            claimName: sabnzbd-appdata
