manifests/media/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.45.0/24"
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Downloader
    flame.pawelmalak/url: https://dl.watch.cafio.co/
    flame.pawelmalak/icon: tray-arrow-down
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dl.watch.cafio.co
    secretName: cafio.co-tls
  rules:
  - host: dl.watch.cafio.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd
            port:
              number: 8080
